Criando as seguintes funcionalidades - Configuracoes do RabbitMQ - Criando Queues, Exchanges e Bindings - Configuracao do Docker para subir o Rabbitmq

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,29 @@ server:
 
 spring:
   application.name: post-service
+  datasource:
+    username: sa
+    url: jdbc:h2:file:~/algaposts-post-service-db;CASE_INSENSITIVE_IDENTIFIERS=TRUE;AUTO_SERVER=TRUE
+    driverClassName: org.h2.Driver
+    password: '123'
+  h2:
+    console:
+      enabled: 'true'
+      settings.web-allow-others: 'true'
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
+    show-sql: 'false'
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: rabbitmq
+    password: rabbitmq
+    listener:
+      simple:
+        prefetch: 4
+        retry:
+          enabled: true
+          initial-interval: 10s
+          max-attempts: 3
